...
		"placeholders": {},
		"comments": [],
		"origin": [["../../packages/translations/src/commonMessages.ts", 179]],
		"translation": "Hyväksy"
	},
	"biometrics.activateBiometricsButton": {
		"message": "Activate Biometrics",
		"placeholders": {},
		"comments": [],
		"origin": [["src/features/onboarding/onboardingContext.tsx", 261]],
		"translation": "Ota biometria käyttöön"
	},
	"onboarding.biometrics.subtitle": {
...
			"Section heading for list of received cards in the activity detail screen"
		],
		"origin": [["src/features/activity/ActivityDetailScreen.tsx", 169]],
		"translation": "Kortit"
	},
	"onboarding.pin.title": {
		"message": "Choose a 6-digit PIN",
		"placeholders": {},
		"comments": ["Heading when user chooses a PIN"],
		"origin": [["src/features/onboarding/steps.ts", 9]],
		"translation": "Valitse 6-numeroinen PIN-koodi"
	},
	"onboardingIntroduction.step1.description": {
...
		"placeholders": {},
		"comments": ["Title prompting the user to enter a transaction code"],
		"origin": [["src/features/receive/slides/TxCodeSlide.tsx", 51]],
		"translation": "Syötä tapahtumakoodi"
	},
	"common.enterPin": {
		"message": "Enter your app PIN code",
		"placeholders": {},
		"comments": ["Heading prompting the user to enter their PIN code"],
		"origin": [["../../packages/translations/src/commonMessages.ts", 80]],
		"translation": "Syötä sovelluksen PIN-koodi"
	},
	"pidSetup.idCardPin.title": {
...
		"placeholders": {},
		"comments": ["Intro sentence before showing support email address"],
		"origin": [["src/features/menu/AboutScreen.tsx", 33]],
		"translation": "Lisätietoja saat ottamalla yhteyttä"
	},
	"onboardingWalletExplanation.getStarted": {
		"message": "Get Started",
		"placeholders": {},
		"comments": ["Button label to finish onboarding explanation"],
		"origin": [["src/features/onboarding/screens/wallet-explanation.tsx", 71]],
		"translation": "Aloita"
	},
	"onboardingWelcome.getStarted": {
...
		"placeholders": {},
		"comments": ["Button label to open device settings"],
		"origin": [["../../packages/translations/src/commonMessages.ts", 38]],
		"translation": "Siirry asetuksiin"
	},
	"common.goToWallet": {
		"message": "Go to wallet",
		"placeholders": {},
		"comments": ["Button label to return to the wallet"],
		"origin": [["../../packages/translations/src/commonMessages.ts", 33]],
		"translation": "Siirry lompakkoon"
	},
	"button.gotIt": {
...
		"placeholders": {},
		"comments": ["Shown when user declines sharing proof"],
		"origin": [["src/features/share/MdocOfflineSharingScreen.tsx", 148]],
		"translation": "Tietojen jakaminen on hylätty"
	},
	"pidSetup.dataProtection.title": {
		"message": "Protect your data",
		"placeholders": {},
		"comments": [],
		"origin": [["src/utils/sharedPidSetup.ts", 25]],
		"translation": "Suojaa tietosi"
	},
	"requestPurpose.purposeHeading": {
...
		"placeholders": {},
		"comments": ["The region of a person"],
		"origin": [["../../packages/translations/src/commonMessages.ts", 512]],
		"translation": "Alue"
	},
	"onboarding.pinReenter.title": {
		"message": "Repeat your PIN",
		"placeholders": {},
		"comments": ["Heading when user repeats their PIN"],
		"origin": [["src/features/onboarding/steps.ts", 21]],
		"translation": "Syötä sama PIN-koodi uudelleen"
	},
	"inbox.notificationType.request": {
...
		"placeholders": {},
		"comments": [],
		"origin": [["../../packages/translations/src/commonMessages.ts", 223]],
		"translation": "Vaadittava parametri puuttuu, jotta kutsu voidaan hyväksyä."
	},
	"payShare.title": {
		"message": "Review the request",
		"placeholders": {},
		"comments": ["Main heading in the pay & share screen"],
		"origin": [["src/features/share/slides/PayAndShareSlide.tsx", 52]],
		"translation": "Tarkista pyyntö"
	},
	"submission.reviewTitle": {
...
		"placeholders": {},
		"comments": ["Heading above the seller section"],
		"origin": [["src/features/share/slides/PaymentSlide.tsx", 104]],
		"translation": "Myyjä"
	},
	"pinSlide.title": {
		"message": "Send data with your PIN code",
		"placeholders": {},
		"comments": [
			"Heading shown when user is asked to enter their app PIN to confirm a request"
		],
		"origin": [["src/features/share/slides/PinSlide.tsx", 39]],
		"translation": "Lähetä tiedot PIN-koodillasi"
	},
	"onboarding.biometrics.title": {
		"message": "Set up biometrics",
		"placeholders": {},
		"comments": ["Heading when user sets up biometrics"],
		"origin": [["src/features/onboarding/steps.ts", 27]],
		"translation": "Aseta biometriikka"
	},
	"common.setUpLater": {
...
		"placeholders": {},
		"comments": ["Header title for the settings screen"],
		"origin": [["src/features/menu/SettingsScreen.tsx", 148]],
		"translation": "Asetukset"
	},
	"submission.share": {
		"message": "Share",
		"placeholders": {},
		"comments": ["Button label to accept and share credentials"],
		"origin": [["src/features/share/slides/ShareCredentialsSlide.tsx", 51]],
		"translation": "Jaa"
	},
	"offlineQr.heading": {
...
		"placeholders": {},
		"comments": ["The street where someone lives"],
		"origin": [["../../packages/translations/src/commonMessages.ts", 417]],
		"translation": "Katu"
	},
	"common.success": {
		"message": "Success!",
		"placeholders": {},
		"comments": ["Title shown when an action completes successfully"],
		"origin": [["../../packages/translations/src/commonMessages.ts", 43]],
		"translation": "Onnistui!"
	},
	"pidSetup.idCardComplete.title": {
...
		"placeholders": {},
		"comments": ["Shown when scanned QR code has unsupported URL prefix"],
		"origin": [["../../packages/app/src/features/scan/ScanScreen.tsx", 17]],
		"translation": "QR-koodia ei tueta. Kokeile toista."
	},
	"qrScanner.instructionHeading": {
		"message": "Use the camera to scan a QR code",
		"placeholders": {},
		"comments": ["Instruction heading for scanning a QR code"],
		"origin": [["../../packages/scanner/src/Scanner.tsx", 74]],
		"translation": "Käytä kameraa QR-koodin skannaamiseen"
	},
	"pinSlide.description": {
...
		"placeholders": {},
		"comments": ["Confirm button text for archiving a card"],
		"origin": [["../../packages/translations/src/commonMessages.ts", 333]],
		"translation": "Kyllä, arkistoi"
	},
	"common.confirmContinue": {
		"message": "Yes, continue",
		"placeholders": {},
		"comments": [],
		"origin": [["../../packages/translations/src/commonMessages.ts", 56]],
		"translation": "Kyllä, jatka"
	},
	"common.confirmDecline": {
...
