...

  const walletId = getWalletId(walletKeyVersion)

  paradym = new ParadymWalletSdk({
    id: walletId,
    key: walletKey,
    didcommConfiguration: { label: isFunkeWallet() ? 'EeasyPID Wallet' : 'Paradym Wallet' },
    openId4VcConfiguration: {
      trustedCertificates: trustedX509Certificates as [string, ...string[]],
    },
  })

  await paradym.initialize()
...
