...
		"placeholders": {},
		"comments": ["Label for about screen menu item"],
		"origin": [["src/features/menu/FunkeMenuScreen.tsx", 169]],
		"translation": "Om denna plånbok"
	},
	"common.acceptButton": {
		"message": "Accept",
		"placeholders": {},
		"comments": [],
		"origin": [["../../packages/translations/src/commonMessages.ts", 171]],
		"translation": "Acceptera"
	},
	"biometrics.activateBiometricsButton": {
...
		"placeholders": {},
		"comments": [],
		"origin": [["../../packages/app/src/components/CardInfoLifecycle.tsx", 33]],
		"translation": "Kort återkallat"
	},
	"retrieveCredential.cardSuccessfully added": {
		"message": "Card successfully added to your wallet!",
		"placeholders": {},
		"comments": [],
		"origin": [
			["src/features/receive/slides/CredentialRetrievalSlide.tsx", 188]
		],
		"translation": "Kort har lagts till i din plånbok!"
...
			"Heading shown when a secure connection to an issuer was successfully created"
		],
		"origin": [["src/features/didcomm/ConnectionSlides.tsx", 65]],
		"translation": "Anslutning upprättad"
	},
	"common.continue": {
		"message": "Continue",
		"placeholders": {},
		"comments": ["Generic continue/next action label"],
		"origin": [["../../packages/translations/src/commonMessages.ts", 20]],
		"translation": "Fortsätt"
	},
	"funkeMdoc.error.sharing": {
...
		"placeholders": {},
		"comments": ["The country where someone lives"],
		"origin": [["../../packages/translations/src/commonMessages.ts", 430]],
		"translation": "Land"
	},
	"requestedAttributes.fallbackCardLabel": {
		"message": "Credential",
		"placeholders": {},
		"comments": [
			"Fallback name shown when a credential does not have a display name"
		],
		"origin": [
			["src/features/share/components/RequestedAttributesSection.tsx", 52]
...
		"placeholders": {},
		"comments": [],
		"origin": [["../../packages/translations/src/commonMessages.ts", 404]],
		"translation": "Födelsedatum"
	},
	"common.declineButton": {
		"message": "Decline",
		"placeholders": {},
		"comments": [],
		"origin": [["../../packages/translations/src/commonMessages.ts", 175]],
		"translation": "Avvisa"
	},
	"didcommCancelFlow.issuance.title": {
...
		"placeholders": {},
		"comments": ["Title prompting the user to enter a transaction code"],
		"origin": [["src/features/receive/slides/TxCodeSlide.tsx", 39]],
		"translation": "Ange transaktionskod"
	},
	"common.enterPin": {
		"message": "Enter your app PIN code",
		"placeholders": {},
		"comments": ["Heading prompting the user to enter their PIN code"],
		"origin": [["../../packages/translations/src/commonMessages.ts", 72]],
		"translation": "Ange din PIN-kod för appen"
	},
	"pidSetup.idCardPin.title": {
...
		},
		"comments": [],
		"origin": [["src/features/wallet/FunkeWalletScreen.tsx", 72]],
		"translation": "Hej {userName}!"
	},
	"home.helloWithoutName": {
		"message": "Hello!",
		"placeholders": {},
		"comments": [],
		"origin": [["src/features/wallet/FunkeWalletScreen.tsx", 74]],
		"translation": "Hej!"
	},
	"credentials.hideMetadata": {
...
		"placeholders": {},
		"comments": [],
		"origin": [["../../packages/translations/src/commonMessages.ts", 207]],
		"translation": "Inbjudningstyp inte tillåten."
	},
	"receiveCredential.checkInformationHeader": {
		"message": "Is the information correct?",
		"placeholders": {},
		"comments": [],
		"origin": [
			["src/features/receive/slides/CredentialRetrievalSlide.tsx", 174]
		],
		"translation": "Är informationen korrekt?"
...
		"placeholders": {},
		"comments": ["The street where someone lives"],
		"origin": [["../../packages/translations/src/commonMessages.ts", 420]],
		"translation": "Gata"
	},
	"pidSetup.idCardComplete.title": {
		"message": "Success!",
		"placeholders": {},
		"comments": [],
		"origin": [["src/utils/sharedPidSetup.ts", 77]],
		"translation": "Klart!"
	},
	"receiveCredential.successHeader": {
...
		"placeholders": {},
		"comments": ["Confirm button text for archiving a card"],
		"origin": [["../../packages/translations/src/commonMessages.ts", 326]],
		"translation": "Ja, arkivera"
	},
	"common.confirmContinue": {
		"message": "Yes, continue",
		"placeholders": {},
		"comments": [],
		"origin": [["../../packages/translations/src/commonMessages.ts", 48]],
		"translation": "Ja, fortsätt"
	},
	"common.confirmDecline": {
...
