appId: id.paradym.wallet.preview
tags:
  - verification-openid4vc
---
- runFlow: onboarding.yaml
- runScript:
    file: scripts/request.js
    env:
      ACTION: '{"action":"createVerification", "requestSignerType":"x5c", "flow":"openid4vc", "requestType":"arf-18-pid"}'
      ISSUER_BACKEND: ${MAESTRO_ISSUER_BACKEND}
- openLink:
    link: ${output.deeplink}

- repeat:
    while:
      visible: "Enter your app PIN code"
    commands:
      - tapOn: "Pin number 1"

- tapOn: Yes, continue
- assertVisible: Review the request
- tapOn: Share

- repeat:
    while:
      visible: "Send data with your PIN code"
    commands:
      - tapOn: "Pin number 1"
- assertVisible: Success!

# On Android the button is "Go to wallet" (without space), while on iOS a trailing space is required.
- runFlow:
    when:
      platform: Android
    commands:
      - tapOn: "Go to wallet"
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: "Go to wallet  "
