appId: id.paradym.wallet.preview
tags:
  - presentation-during-issuance
---
- runFlow: ./issue-none/issue-none-openid4vc.yaml
- runScript:
    file: scripts/request.js
    env:
      ACTION: '{"action":"createOffer", "format":"mdoc", "authorization":"presentation", "requestType": "certificate-of-residence"}'
      ISSUER_BACKEND: ${MAESTRO_ISSUER_BACKEND}

- openLink:
    link: ${output.deeplink}

- repeat:
    while:
      visible: "Enter your app PIN code"
    commands:
      - tapOn: "Pin number 1"

- waitForAnimationToEnd:
    timeout: 5000

- tapOn: "Yes, continue"

- waitForAnimationToEnd:
    timeout: 5000

- assertVisible: "Card offered"
- tapOn: "Continue"

- waitForAnimationToEnd:
    timeout: 5000

- assertVisible: Review the request
- tapOn: Share

- repeat:
    while:
      visible: "Send data with your PIN code"
    commands:
      - tapOn: "Pin number 1"

- assertVisible: Is the information correct?
- tapOn: Accept


- assertVisible: "Success!"
- assertVisible: "Card successfully added to your wallet!"
- assertVisible: "Credential"

# On Android the button is "Go to wallet" (without space), while on iOS a trailing space is required.
- runFlow:
    when:
      platform: Android
    commands:
      - tapOn: "Go to wallet"
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: "Go to wallet  "

- waitForAnimationToEnd:
    timeout: 5000

- assertVisible: "Hello!"
- assertVisible: "Receive or share from your wallet "
